docs : 정리.. 위상 등등

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -72,6 +72,33 @@ a : world
 b : hello
 ```
 
+<br>
+
+**자바는 소수점 표기도 특징이 있다.**
+
+* **`3E10` 이런 형태로 지수 표기를 함.**
+  * 본인은 이런경우 그냥 `printf` 를 사용해서 해결함
+    * ex : `System.out.printf("%.1f", result);`
+* **소수점 관련 함수는 보통 `Math.round(), String.format()` 을 주로 사용**
+  * 둘다 소수점 n번째 자리까지 반올림!!
+  * 참고 - 올림 : Math.ceil(), 버림 Math.floor();
+  * 단, Math.round() 와 String.format() 의 차이점이 있음 - 소수점 뒤의 0 절삭유무
+
+```java
+// 차이점
+double test = 3000.000;
+System.out.println(Math.round(test*1000)/1000); // 3000
+System.out.println(String.format("%.3f", test)); // 3000.000
+// 참고로 원하는 소수점 n번째 표현은? 아래 예시는 n=3
+double pi = 3.141592
+System.out.println(Math.round(pi*1000)/1000.0); // 3.142
+/*
+즉, 
+3.141592*1000 => 3141.592 여기서 round => 3142
+3142/1000.0 => 3.142
+*/
+```
+
 <br><br>
 
 ## 입출력 - I/O
@@ -781,8 +808,21 @@ static class ObjectSort implements Comparator <Integer> {
     @Override
     public int compare(Integer a, Integer b) { // a, b는 inArr값
         return order[a] - order[b]; // 비교를 order배열로 하게끔 커스텀
-    } // a가 b의 앞에 와야할 때 양수, 그렇지 않을 때 음수, 동일할 때 0
+    } 
+    // a가 b의 앞에 와야할 때 위 식이 양수, 그렇지 않을 때 음수, 동일할 때 0
+    // 즉, 오름차순을 의미
 }
+
+// 정렬 TIP!!
+// Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일!!
+    static class ObjectSortTip implements Comparator <Point> {
+        @Override
+        public int compare(Point a, Point b) {
+            if(getAngle(a) != getAngle(b)) return Double.compare(getAngle(a), getAngle(b));
+            if(a.y != b.y) return Long.compare(a.y, b.y);
+            return Long.compare(a.y, b.y); // == a.x < b.x ? -1 : (a.x==b.x?0:1)
+        }
+    }
 ```
 
 <br><br>
@@ -1677,6 +1717,115 @@ public static void main(String[] args) throws IOException {
 }
 ```
 
+<br>
+
+**SCC(Strongly Connected Component) 도 추가로 BOJ 문제 하나 풀어보겠다.**
+
+* **SCC 개념익히기 좋은 글 : [네이버 블로그](https://m.blog.naver.com/PostView.naver?blogId=babobigi&logNo=221880301130&referrerCode=0&searchKeyword=SCC)**
+* **출력때 TreeMap 활용**
+
+```java
+/**
+ * BOJ 2150
+ * 1. G를 DFS로 순회하면서 finish time을 구한다 => 위상정렬 구하는 또다른 방식중 하나
+ * 2. G의 에지 방향을 반대로 한 𝐺^𝑇 (transpose of G)에서 DFS를 이용해 순회
+ * => 단, 앞에서 구한 finish time의 역순을 고려하면서 DFS 적용
+ * 3. 𝐺^𝑇 에서 도달가능한 것들의 집합은 SCC가 된다
+*/
+static int V, E;
+static List<Integer>[] inArr = new ArrayList[10005];
+static List<Integer>[] reArr = new ArrayList[10005];
+static List<Integer>[] outArr = new ArrayList[10005];
+static int[] f = new int[10005]; // finish time
+static boolean[] visited = new boolean[10005];
+
+public static void main(String[] args) throws IOException {
+    for(int i = 0 ; i<10005; i++) {
+        inArr[i] = new ArrayList<>();
+        reArr[i] = new ArrayList<>();
+        outArr[i] = new ArrayList<>();
+    }
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    V = Integer.parseInt(stk.nextToken());
+    E = Integer.parseInt(stk.nextToken());
+    for(int i = 0 ; i<E;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        int a = Integer.parseInt(stk.nextToken());
+        int b = Integer.parseInt(stk.nextToken());
+        inArr[a].add(b);
+        reArr[b].add(a);
+    }
+
+    // run
+    // 1. Graph를 DFS로 순회하면서 finish time을 구한다
+    Stack<Integer> st = new Stack<>();
+    for(int i = 1; i<=V; i++) {
+        if(!visited[i]) {
+            dfs(i, st);
+        }
+    }
+    Arrays.fill(visited, false);
+    int SCCNum = 0;
+
+    // 2. G의 에지 방향을 반대로 한 𝐺^𝑇 (transpose of G)에서 DFS를 이용해 순회
+    // => 단, 앞에서 구한 finish time의 역순을 고려하면서 DFS 적용 (역순=내림차순 고려)
+    while(!st.isEmpty()) {
+        int cur = st.peek(); st.pop();
+
+        if(visited[cur]) continue; // 이미 SCC 그룹에 속해 있다는 것
+        redfs(cur, SCCNum);
+        SCCNum++;
+    }
+
+    // output
+    StringBuilder sb = new StringBuilder();
+    sb.append(SCCNum).append('\n');
+
+    TreeMap<Integer, Integer> map = new TreeMap<>(); // key를 기준으로 오름차순 정렬.
+    for(int i = 0 ; i<SCCNum; i++) {
+        Collections.sort(outArr[i]);
+        map.put(outArr[i].get(0), i); // key : SCC 그룹의 첫번째 항, value : 인덱스.
+    }
+
+    // map의 value를 이용하여 => RBT 특성상 정렬되었기 때문
+    // 첫번째 항이 작은 순서대로 출력. => 문제에서 출력 조건때문에!
+    map.keySet().forEach(key -> {
+        int cur = map.get(key);
+
+        for (int nxt : outArr[cur]) {
+            sb.append(nxt + " ");
+        }
+        sb.append("-1\n");
+    });
+    System.out.println(sb);
+}
+
+public static void dfs (int depth, Stack st) {
+    visited[depth] = true;
+
+    for(int nxt : inArr[depth]) {
+        if(!visited[nxt]) {
+            dfs(nxt, st);
+        }
+    }
+    st.add(depth); // 탐색 종료시점
+}
+
+public static void redfs(int depth, int SCCNum) {
+    visited[depth] = true;
+    // 3. 𝐺^𝑇 에서 도달가능한 것들의 집합은 SCC가 된다
+    outArr[SCCNum].add(depth);
+
+    for(int nxt : reArr[depth]) {
+        if(!visited[nxt]) {
+            redfs(nxt, SCCNum);
+        }
+    }
+}
+```
+
 <br><br>
 
 ## 최소 신장 트리(MST)
@@ -2092,50 +2241,158 @@ static class Point {
 
 <br>
 
-
-
-
-
-
-
-
-
-
-
 ### 2. 다각형 면적과 포함 계산
 
-```c++
+```java
 /*
+BOJ 2166
 area 함수 : 다각형 면적 구하기
-insidePolygon 함수 : 다각형 포함 구하기
 */
+public static List<Point> inArr = new ArrayList<>();
 
-// 다각형 면적 구하기 (외전 전부 더하면 됨)
-double area(vector<Point> p) {
-	int ret = 0;
-	int n = p.size(); // 다각형 p의 정점 개수
-	for (int i = 0; i < n; i++) {
-		int j = (i + 1) % n; // 마지막에 index n->0으로 바뀜
-		ret += (p[i].x * p[j].y - p[i].y * p[j].x);
-	}
-	return abs(ret) / 2.0;
+public static long ccw(Point a, Point b, Point c) {
+    // 깊은 복제
+    Point a1 = new Point(a.x, a.y);
+    Point b1 = new Point(b.x, b.y);
+    Point c1 = new Point(c.x, c.y);
+    // 원점 이동
+    a1.x -= c1.x;
+    a1.y -= c1.y;
+    b1.x -= c1.x;
+    b1.y -= c1.y;
+    // det(행렬식) 계산
+    return a1.x*b1.y-a1.y*b1.x;
 }
 
-// 다각형 포함 문제 (교차점 홀수면 내부 포함 인정)
-bool insidePolygon(Point q, vector<Point> P) {
-	int n = P.size();
-	int crossings = 0;
-	for (int i = 0; i < n; i++) {
-		int iPlus1 = (i + 1) % n; // 마지막에 index n->0으로 바뀜
-		// 1. 점 q가 다각형 에지(표면)에 있나 먼저 확인
-		if (between(P[i], P[iPlus1], q)) return false;
-		// 2. 교차점 판별 => crossings에 +1
-		if((P[i].y<q.y&&P[iPlus1].y>=q.y&&leftTurn(P[i],P[iPlus1],q)) ||
-			(P[iPlus1].y<q.y&&P[i].y>=q.y&&leftTurn(P[iPlus1],P[i],q)))
-			crossings++;
-	}
-	if (crossings % 2 != 0) return true; // 홀수라면 true !!
-	return false;
+// 외적 전부 더하기
+public static double area() {
+    double ret = 0;
+    int n = inArr.size(); // 다각형의 정점 개수
+    for(int i = 1; i<n; i++) {
+        int nxtI = (i+1) % n; // 마지막에 index n->0으로 바뀜
+        ret+=ccw(inArr.get(i), inArr.get(nxtI), inArr.get(0)); // index 0 정점 기준 외적 구했음
+    }
+    return Math.abs(ret) / 2.0;
+}
+
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk;
+    int N = Integer.parseInt(br.readLine());
+    for(int i = 0 ; i<N;i++){
+        stk = new StringTokenizer(br.readLine(), " ");
+        long a = Integer.parseInt(stk.nextToken());
+        long b = Integer.parseInt(stk.nextToken());
+        inArr.add(new Point(a, b));
+    }
+
+    // run & output4
+    double result = Math.round(area()*10)/10.0; // 소수 둘째자리에서 반올림 (첫재 자리까지 표기)
+    System.out.printf("%.1f", result); // 자바는 지수를 24E8 이런형태로 출력해서 printf 문을 사용
+}
+static class Point {
+    long x; long y;
+    public Point(long x, long y){
+        this.x = x; this.y = y;
+    }
+}
+```
+
+<br>
+
+```java
+/**
+BOJ 1688
+insidePolygon 함수 : 다각형 포함 구하기
+다각형 포함 문제 (교차점 홀수면 내부 포함 인정)
+*/
+public static List<Point> barrier = new ArrayList<>();
+public static List<Point> friends = new ArrayList<>(); // 대연, 영훈, 범진
+
+public static long ccw(Point a, Point b, Point c) {
+    // 복제
+    Point a1 = new Point(a.x, a.y);
+    Point b1 = new Point(b.x, b.y);
+    Point c1 = new Point(c.x, c.y);
+    // 원점이동
+    a1.x -= c1.x;
+    a1.y -= c1.y;
+    b1.x -= c1.x;
+    b1.y -= c1.y;
+    // det(행렬식) 계산
+    return a1.x* b1.y- a1.y* b1.x;
+}
+
+// 점 c가 a,b직선 상에 존재하는지 판별함수
+public static boolean between(Point a, Point b, Point c) {
+    // 1. 일직선 상에 존재하나 먼저 확인
+    if (ccw(a, b, c) != 0) return false;
+    else {
+        // 2. 수직 여부 확인 후 범위제한
+        if(a.x == b.x) { // 세로선
+            if((c.y>=a.y&&c.y<=b.y)||(c.y>=b.y&&c.y<=a.y)) return true;
+        }else{ // 가로선
+            if((c.x>=a.x&&c.x<=b.x)||(c.x>=b.x&&c.x<=a.x)) return true;
+        }
+        return false;
+    }
+}
+
+public static boolean leftTurn(Point a, Point b, Point c) {
+    if(ccw(a,b,c)>0) return true;
+    return false;
+}
+
+public static boolean insidePolygon(int friIndex) {
+    int crossing = 0; // 교차 홀수여야 내부라 판단
+    int n = barrier.size();
+    Point fri = friends.get(friIndex);
+    for (int i = 0 ; i<n; i++){
+        int iNxt = (i+1) % n;
+        Point a = barrier.get(i);
+        Point b = barrier.get(iNxt);
+        // 1. 경계면인지 확인(여기선 경계면도 포함이라서 true 로)
+        if(between(a,b,fri)) return true;
+        // 2. 교차점 판별(범위 비교로 판단)
+        if((a.y<fri.y && b.y>=fri.y&&leftTurn(a,b,fri)) ||
+           (b.y<fri.y && a.y>=fri.y&&leftTurn(b,a,fri)))
+            crossing++;
+    }
+    if(crossing%2!=0) return true;
+    return false;
+}
+
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk;
+    int N = Integer.parseInt(br.readLine());
+    for(int i = 0 ; i<N; i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        long a = Long.parseLong(stk.nextToken());
+        long b = Long.parseLong(stk.nextToken());
+        barrier.add(new Point(a,b));
+    }
+    for(int i = 0 ; i<3; i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        long a = Long.parseLong(stk.nextToken());
+        long b = Long.parseLong(stk.nextToken());
+        friends.add(new Point(a,b));
+    }
+
+    // run
+    for(int i = 0 ; i<3; i++) {
+        if(insidePolygon(i)) System.out.println(1);
+        else System.out.println(0);
+    }
+
+}
+static class Point {
+    long x; long y;
+    public Point(long x, long y) {
+        this.x = x; this.y = y;
+    }
 }
 ```
 
@@ -2145,99 +2402,106 @@ bool insidePolygon(Point q, vector<Point> P) {
 
 **O(NlogN ) 방법 소개 - 참고 사이트 : https://www.crocus.co.kr/1288**
 
-```c++
+```java
 /*
 1. 우선 기준점을 잡는다. (보통 기준점은 y좌표가 가장 작은 것을 기준으로 한다.)
 => y좌표, x좌표 기준 오름차순 정렬해서 기준점을 P[0]으로 바로 잡자
 
 2. 그리고 이 기준점으로 하여 다른 점들을 반시계 방향으로 정렬한다.
 => 각도에 따라 정렬 핵심 (참고 : 원점 이동한 상대위치로 각도 구함)
+=> arctan(y,x) 활용 : 두 점사이의 절대각도 구함
 
 3. 컨벡스 헐 알고리즘(그라함 스캔(Graham's Scan) 알고리즘)을 이용한다.
 => 사이트 그림보면 이해하기 쉬움
 */
+public static List<Point> inArr = new ArrayList<>();
 
-#include<iostream>
-#include<algorithm>
-#include<cmath> // atan2 (아크탄젠트 - 두점사이 절대각도 구함)
-#include<stack>
-using namespace std;
-
-struct point {
-	int x, y;
-	int p, q;
-};
-typedef point Point;
-
-double getAngle(Point p) {
-    return atan2(p.q, p.p);
+public static long ccw(Point a, Point b, Point c) {
+    // 복제
+    Point a1 = new Point(a.x, a.y);
+    Point b1 = new Point(b.x, b.y);
+    Point c1 = new Point(c.x, c.y);
+    // 원점이동
+    a1.x -= c1.x;
+    a1.y -= c1.y;
+    b1.x -= c1.x;
+    b1.y -= c1.y;
+    // det(행렬식) 계산
+    return a1.x* b1.y- a1.y* b1.x;
 }
 
-// 1. 각도 비교 사용시 각도 비교를 우선으로 정렬
-// 2. 각도 비교 사용 안할시 y기준 정렬, x기준 정렬
-bool comp(Point a, Point b) {
-    // p, q 사용시 아래 조건문 만족하게 됨
-    // p, q 사용안하면 0으로 초기화 되어있어서 아래 조건문 불만족
-    if (getAngle(a) != getAngle(b)) return getAngle(a) < getAngle(b);
-    
-    if (a.y != b.y) return a.y < b.y;
-    return a.x < b.x;
-}
-
-Point P[100];
-
-int main() {
-    int n; // 점 개수
-    cin >> n;
-
-    for (int i = 0; i < n; i++) {
-        int x, y;
-        cin >> x >> y;
-        P[i] = { x,y };
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk;
+    int N = Integer.parseInt(br.readLine());
+    for(int i = 0 ; i<N;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        long a = Long.parseLong(stk.nextToken());
+        long b = Long.parseLong(stk.nextToken());
+        inArr.add(new Point(a,b));
     }
 
+    // run
     // y좌표, x좌표 기준 오름차순 정렬
-    sort(P, P + n, comp);
-
-    // 기준점(=P[0])기준 상대위치 기록 (따라서 i=1부터)
-    for (int i = 1; i < n; i++) {
-        P[i].p = P[i].x - P[0].x; // 기준점 빼서 원점으로 이동
-        P[i].q = P[i].y - P[0].y;
+    ObjectSort ob = new ObjectSort();
+    Collections.sort(inArr, ob);
+    // 기준점(=inArr.get(0))기준 상대위치 기록 (따라서 i=1부터)
+    for (int i = 1; i<N; i++){
+        inArr.get(i).p = inArr.get(i).x - inArr.get(0).x;
+        inArr.get(i).q = inArr.get(i).y - inArr.get(0).y;
     }
+    // => 기준점에서 각도 비교로 반시계 정렬(기준점(=0) 제외)
+    List<Point> subList = inArr.subList(1, N); // 추출 리스트
+    Collections.sort(subList, ob); // 정렬
+    List<Point> inArr2 = new ArrayList<>();
+    inArr2.add(inArr.get(0));
+    inArr2.addAll(subList); // 병합
 
-    // 구했던 상대위치 값으로 반시계 방향 정렬(기준점 제외. 따라서 p+1부터)
-    // => 기준점에서 각도 비교로 반시계 정렬하면 됨
-    sort(P + 1, P + n, comp);
+    // 1st, 2st로 바로 초기값 사용
+    Stack<Integer> st = new Stack<>(); // index 기록하므로 그냥 int자료형 사용
+    st.add(0); st.add(1); // 0, 1 index 푸시
 
-    // 1st, 2st로 바로 초기값 사용 가능
-    stack<int> st;
-    st.push(0); st.push(1); // 0, 1 index 푸시
-
-    // 전처리 과정 끝
+    // 전처리 끝
     // 알고리즘 시작
-    int next = 2; // next는 index 2부터 판단 시작
-    while (next < n) { // 0부터 시작했으므로 next가 최종 n까지 가면 1바퀴 다 돈것이다
+    int next = 2;
+    while (next < N) {
         while (st.size() >= 2) {
             int first, second;
-            second = st.top();
+            second = st.peek();
             st.pop();
-            first = st.top();
+            first = st.peek();
 
-            // first, second, next가 좌회전 ( > 0 )이라면 second push 하고 next 이동
-            // 우회전( < 0 )이라면 위의 while문 계속 반복 (즉, 이전 first,second상태로 되돌아감)
-            if (ccw(P[first], P[second], P[next]) > 0) { // leftTurn써도 됨
-                st.push(second);
+            // leftTurn 사용
+            if (ccw(inArr2.get(first), inArr2.get(second), inArr2.get(next)) > 0) {
+                st.add(second);
                 break;
             }
         }
-
-        // next push
-        st.push(next++);
+        st.add(next++); // next push
     }
 
-    cout << st.size(); // 볼록외피 좌표 index들 담겨있음
-
-    return 0;
+    // output
+    System.out.println(st.size());
+}
+public static double getAngle(Point a) {
+    return Math.atan2(a.q, a.p); // 아크탄젠트로 각도 계산
+}
+static class ObjectSort implements Comparator <Point> {
+    @Override
+        public int compare(Point a, Point b) {
+        if(getAngle(a) != getAngle(b)) return Double.compare(getAngle(a), getAngle(b));
+        if(a.y != b.y) return Long.compare(a.y, b.y);
+        return Long.compare(a.x, b.x); // == a.x < b.x ? -1 : (a.x==b.x?0:1)
+    }
+}
+static class Point {
+    long x; long y; // 절대위치
+    long p; long q; // 상대위치
+    public Point(long x, long y){
+        this.x = x; this.y = y;
+        this.p = 0; this.q = 0;
+    }
 }
 ```
 
@@ -2245,84 +2509,86 @@ int main() {
 
 ### 4. 평면 소거법(Plane Sweeping) => 합집합
 
-```c++
-#include<iostream>
-#include<vector>
-using namespace std;
+* `BOJ2185` 를 풀어야하는데, 아래 코드로는 풀리지 않는다..
+* 아래코드는 좌표가 겹치지 않고, 왼쪽아래 오른쪽위 좌표 순서로 받는것을 가정했을때 올바르게 동작한다.
 
-struct Rectangle {
-	int x1, y1, x2, y2;
-};
+```java
+public static List<Rectangle> inArr = new ArrayList<>();
+public static List<Integer> Q = new ArrayList<>();
+public static List<Integer> S = new ArrayList<>();
+public static int[] counts = new int[10005];
 
-vector<Rectangle> inArr;
-int Q[10]; // 직사각형 x좌표 정렬해서 기록
-int S[10]; // 직사각형 y좌표 정렬해서 기록
-int counts[10]; // 겹쳐진 사각형 수
-int m1 = 8; // events - Q size
-int m2 = 8; // S size
-
-// 합집합의 면적 계산 (합집합이므로 중복 면접 제외)
-int UnionArea() {
-	int sweepLine = 0; int delta = 0; int area = 0; // 면적
-	for (int i = 0; i < m1; i++) {
-		sweepLine = Q[i];
-		Rectangle R = { 0,0,0,0 };
+public static int unionArea() {
+    int sweepLine = 0; int delta = 0; int area = 0; // 면적
+    for (int i = 0; i<Q.size(); i++) { // x값 전부 순회!
+        sweepLine = Q.get(i);
+        Rectangle R = new Rectangle(0,0,0,0);
         // 0. 사용할 사각형 선택(x값 겹칠때 마다 선택)
-		for (int j = 0; j < inArr.size(); j++) {
-			if (inArr[j].x1 == Q[i] || inArr[j].x2 == Q[i]) {
-				R = inArr[j];
-				break;
-			}
-		}
+        for(int j = 0 ; j<inArr.size(); j++) {
+            if(inArr.get(j).x1 == Q.get(i) || inArr.get(j).x2==Q.get(i)) {
+                R = inArr.get(j);
+                break;
+            }
+        }
 
         // 1. counts배열 구하기(y값 활용)
-		// sweepLine이 만나는 사각형의 왼쪽 가로선만 +1, 오른쪽 가로선은 -1
-		if (sweepLine == R.x1) delta = 1;
-		else delta = -1;
+        // sweepLine이 만나는 사각형의 왼쪽 가로선만 +1, 오른쪽 가로선은 -1
+        if (sweepLine == R.x1) delta = 1;
+        else delta = -1; // => R.x2와 만난다고 볼 수 있음
 
-		int y1 = R.y1; int y2 = R.y2;
-		for (int j = 0; j < m2; j++) {
-			if (y1 <= S[j] && S[j] < y2) {
-				counts[j] += delta; // S[j]~S[j+1] 구간에 겹쳐진 사각형의 수
-			}
-		}
-        
-        // 2. 면적 계산 시작 
+        int y1 = R.y1; int y2 = R.y2;
+        for (int j = 0 ; j<S.size(); j++) {
+            if(y1 <= S.get(j) && S.get(j) < y2)
+                counts[j] += delta; // S[j]~S[j+1] 구간에 겹쳐진 사각형의 수
+        }
+
+        // 2. 면적 계산 시작
         // 현재 내부면적 세로줄(S[j + 1] - S[j])
-		int curlength = 0; 
-		for (int j = 0; j < m2; j++) {
-			if (counts[j] > 0) { // counts배열 있는 값만(사각형 있는 경우에만)
-				curlength += S[j + 1] - S[j];
-			}
-		}
-        
-		// 현재 내부면적 가로줄(Q[i+1]-Q[i])
-		if ((i + 1) < m1) {
-			area += curlength * (Q[i + 1] - Q[i]); // 현재 구한 면적 더함
-		}
-	}
-	return area;
+        int curLen = 0;
+        for (int j = 0; j < S.size(); j++) {
+            if (counts[j] > 0) { // counts배열 있는 값만(사각형 있는 경우에만)
+                curLen += S.get(j+1) - S.get(j);
+            }
+        }
+
+        // 현재 내부면적 가로줄(Q[i+1]-Q[i])
+        if ((i + 1) < Q.size()) {
+            // 사각형 면적 : 세로*가로
+            area += curLen * (Q.get(i+1) - Q.get(i)); // 현재 구한 면적 더함
+        }
+    }
+    return area;
 }
 
-
-int main() {
-	cin >> N;
-	for (int i = 0; i < N; i++) {
-		cin >> inArr[i].x1 >> inArr[i].y1 >> inArr[i].x2 >> inArr[i].y2;
-		Q[i * 2] = inArr[i].x1; Q[i * 2 + 1] = inArr[i].x2;
-		S[i * 2] = inArr[i].y1; S[i * 2 + 1] = inArr[i].y2;
-	}
-	m1 = N * 2; // 총 x축 개수
-	m2 = N * 2; // 총 y축 개수
-	
+public static void main(String[] args) throws IOException {
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk;
+    int N = Integer.parseInt(br.readLine());
+    int temp = 0;
+    for(int i = 0 ; i<N;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        int x1 = Integer.parseInt(stk.nextToken());
+        int y1 = Integer.parseInt(stk.nextToken());
+        int x2 = Integer.parseInt(stk.nextToken());
+        int y2 = Integer.parseInt(stk.nextToken());
+        inArr.add(new Rectangle(x1, y1, x2, y2));
+        Q.add(x1); Q.add(x2); S.add(y1); S.add(y2);
+    }
     // x축, y축 기록한 배열들 꼭 오름차순으로 정렬 후 사용
-	sort(&Q[0], &Q[m1]);
-	sort(&S[0], &S[m2]);
+    Collections.sort(Q);
+    Collections.sort(S);
 
-	cout << unionArea();
-
-	return 0;
+    // run & output
+    System.out.println(unionArea());
 }
+static class Rectangle {
+    int x1; int y1; int x2; int y2;
+    public Rectangle(int x1, int y1, int x2, int y2) {
+        this.x1 = x1; this.y1 = y1; this.x2 = x2; this.y2 = y2;
+    }
+}
+
 ```
 
 <br><br>
@@ -2331,127 +2597,352 @@ int main() {
 
 **Ford-Fulkerson(DFS.복잡도:flow), Edmonds-Karp(BFS.복잡도:VE^2), Dinic's Algorithm(BFS,DFS.복잡도:EV^2) 가 있으며 여기서 `Dinic's` 만 암기해도 충분**
 
-* Ford-Fulkerson과 Edmonds-Karp는 DFS, BFS만 다르며 나머지는 로직이 정확히 동일
-* **Dinic's** 는 BFS,DFS 뭘 쓰든 상관없는데 본인은 **BFS로 레벨트리 구하고, DFS(재귀)로 연산을 진행**
+**아래 코드에서는 `Dinic's 와 멀티 Source, Sink의 경우` 예를 소개한다.**
+
+* **Ford-Fulkerson**과 **Edmonds-Karp**는 DFS, BFS만 다르며 나머지는 로직이 정확히 동일
+* **Dinic's** 는 **BFS로 레벨트리 구하고, DFS(재귀)로 연산을 진행**
 * **중요한 점**
   * **"이분 매칭" 문제를 "Max-Flow" 문제로 치환해서 풀 수 있다.**
   * **"Min-Cut" 문제는 그냥 "Max-Flow" 로 풀었을 때 답과 동일하다.**
   * **보통 문제를 푸는 방식은 문제에 적합하게 "그래프" 를 설계한 후 풀어나간다.**
     * **"그래프" 그리는 TIP**
       * 그래프에는 **에지**를 그릴텐데 반드시 유량이 아닌 **용량**을 적어줄 것
-        * 햇갈리면 안되는게 **유량은 나중에** 계산할때 값 생기기 시작
+        * 햇갈리면 안되는게 **유량은 나중에** 계산할 때 값 생기기 시작
       * **멀티 Source, Sink**의 경우?? 외부에 **S, T 노드를 임의로 추가**해서 사용
         * Max Flow는 S->T 로 흐르는 최대 유량을 구하는 형태이기 때문
         * 임의로 S, T를 추가했으므로 그래프 그릴때 용량을 잘 설정해야함
       * 복잡한 문제들은 **에지를 안주고** 직접 에지를 **구해야** 할때도 존재
         * **예시 문제 : [Jerry and Tom](https://www.acmicpc.net/problem/14750)**
         * 참고 : 해당 예시에서는 에지를 직접 구해야하며, 해당 에지는 "선분교차" 여부에 따라 구해진다.
+* **참고 용어**
+  * Residual network graph : 잉여(=잔여) 그래프
+  * Level graph : 레벨 그래프(=트리의 각 노드들 깊이 표현)
+  * Argmenting path : 가능한 s->t 경로
+    * 이것을 BFS or DFS 로 구함
 
 <br>
 
-```c++
+```java
 /*
 BOJ 14286 문제. Min-Cut 문제 => "Max-Flow"
+<Dinic's Algo>
+0. init 잉여그래프(c:용량으로)
+1. 레벨그래프를 구함 - BFS를 사용
+2. flow를 찾음 - DFS와 레벨그래프 사용(차단유량 찾기. 1개가아닌 가능한 전부) with 잉여그래프
+3. update 잉여 그래프 = 유량 update 를 의미
+4. TotalFlow 에 구한 flow들을 더함
+=> 1~4 를 반복 - 레벨그래프 구하기 불가할 때 까지(1번 과정이 불가할때까지)
+
+참고 : 코드상에서 work는 속도 개선용일 뿐, reverseIdx는 굉장히 중요(ArrayList에 기록하다보니 필요하게 됨)
+ */
+static int N, M, S, T;
+static List<Node>[] inArr = new ArrayList[505];
+static int[] level = new int[505];
+static int[] work = new int[505]; // 속도 개선용
+
+public static boolean bfs() {
+    Arrays.fill(level, -1);
+    Queue<Integer> qu = new LinkedList<>(); // bfs
+
+    level[S] = 0; // start
+    qu.add(S);
+    while(!qu.isEmpty()) {
+        int curIdx = qu.peek(); qu.remove();
+        for(Node cur : inArr[curIdx]) {
+            // 잔여용량 부족이나 레벨이미 채워진 경우엔 continue
+            if(cur.c<=cur.f || level[cur.nxtIdx] != -1) continue;
+            level[cur.nxtIdx] = level[curIdx] + 1; // => 깊이 기록을 의미
+            qu.add(cur.nxtIdx);
+        }
+    }
+    if(level[T] != -1) return true;
+    return false; // 이 경우는 BFS 순회 실패의 경우. 즉, Dinic's 의 종료시점
+}
+
+// "residual capacity : 잔여용량" 의 개념이 중요
+public static int dfs(int curIdx, int curRsdCap) {
+    // base condition
+    if (curIdx == T) return curRsdCap; // 끝 도달시 return
+
+    //        for (Node cur : inArr[curIdx]) {
+    for(int i = work[curIdx]; i<inArr[curIdx].size(); i++) {
+        Node cur = inArr[curIdx].get(i);
+        // 잔여용량 부족이나 레벨 차가 1이 아닌 경우엔 continue
+        if(cur.c<=cur.f || level[cur.nxtIdx] - level[curIdx] != 1) continue;
+        // 최소 유량 탐색
+        int nxtRsdCap = cur.c-cur.f; // 잔여용량 : 용량-유량
+        int minFlow = dfs(cur.nxtIdx, Math.min(nxtRsdCap, curRsdCap));
+        // 3. update 잉여 그래프 = 유량 update 를 의미
+        if(minFlow > 0) {
+            cur.f += minFlow;
+            inArr[cur.nxtIdx].get(cur.reverseIdx).f -= minFlow;
+            work[curIdx] = i;
+            return minFlow;
+        }
+    }
+    work[curIdx] = inArr[curIdx].size();
+    return 0;
+}
+
+public static void main(String[] args) throws IOException {
+    // init
+    for(int i = 0 ;i <505;i++) inArr[i] = new ArrayList<>();
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    N = Integer.parseInt(stk.nextToken());
+    M = Integer.parseInt(stk.nextToken());
+    int a, b, c;
+    for(int i = 0 ;i <M;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        a = Integer.parseInt(stk.nextToken());
+        b = Integer.parseInt(stk.nextToken());
+        c = Integer.parseInt(stk.nextToken()); // weight
+        // 0. init 잉여그래프(c:용량으로)
+        inArr[a].add(new Node(b, inArr[b].size(), c,0));
+        inArr[b].add(new Node(a, inArr[a].size()-1, c,0)); // 양방향 간선
+    }
+    stk = new StringTokenizer(br.readLine(), " ");
+    S = Integer.parseInt(stk.nextToken());
+    T = Integer.parseInt(stk.nextToken());
+
+    // run
+    int totalFlow = 0; // 제거된 최소 간선 가중치 합
+    while(true) {
+        // 1. 레벨그래프를 구함 - BFS를 사용
+        if(!bfs()) break;
+        // 2. flow를 찾음 - DFS와 레벨그래프 사용(차단유량 찾기)
+        Arrays.fill(work, 0); // 속도 개선용으로 사용(안써도 됨)
+        int flow = dfs(S, 10000000); // 10000000 : 임의로 설정한 잔여용량
+        // 3. TotalFlow 에 구한 flow들을 더함
+        totalFlow += flow;
+    }
+
+    // output
+    System.out.println(totalFlow);
+}
+static class Node {
+    int nxtIdx; // 연결 노드인겸 index
+    int reverseIdx; // 역방향 노드의 배열 index
+    int c; // capacity(용량)
+    int f; // flow(유량)
+    public Node (int nxtIdx, int reveresIdx, int c, int f) {
+        this.nxtIdx = nxtIdx; this.reverseIdx=reveresIdx; this.c = c; this.f = f;
+    }
+}
+```
+
+<br>
+
+```java
+/*
+멀티 Source, Sink 의 문제로 볼 수 있다.
+풀이
+0. 시작(S), 끝(T)를 임의로 지정해서 일반적인 S->T maxflow로 바꾼다.
+1. 쥐와 간선에 대한 정보는 "선분 교차 판정"을 이용 => 간선
+2. 최대 유량으로 해결 => Dinic's 사용하겠음
+
+EX) S = 0, T = H+M+1
+참고 : 양방향이긴 하지만, 실제로 반대방향은 용량이 없는 0으로 꼭 설정
+또한, 경계선은 포함하지 않는다고 했으므로 intersect 가 훨씬 간단
 */
-#include<iostream>
-#include<vector> // tree
-#include<queue> // bfs
-#include<algorithm> // fill
-#define INF 987654321
-using namespace std;
+static List<Node>[] inArr = new ArrayList[505];
+static int[] level = new int[505];
+static int[] work = new int[505]; // 속도 개선용
+static int N, K, H, M; // N모서리 개수, K용량, H쥐구멍 개수, M쥐의 수
+static int S, T; // 시작, 끝
+static Point[] house = new Point[1005];
+static Point[] hole = new Point[55];
+static Point[] mouse = new Point[255]; // H*K
 
-int c[505][505]; // 용량
-int f[505][505]; // 유량
-vector<int> vc[505]; // tree
-int level[505]; // 레벨 그래프
-int work[505];
-
-int N, M, S, T; // 정점 수, 에지 수, 시작 노드, 끝 노드
-
-bool bfs() {
-	// init
-	fill(level, level + 505, -1);
-	queue<int> qu; // bfs
-	level[S] = 0;
-	qu.push(S);
-	while (!qu.empty()) {
-		int cur = qu.front();
-		qu.pop();
-
-		for (int i = 0; i < vc[cur].size(); i++) {
-			int nxt = vc[cur][i];
-			if (c[cur][nxt] <= f[cur][nxt] || level[nxt] != -1) continue;
-			// 레벨이 아직 정해지지 않았고 잔여용량이 0이상은 계속 진행
-			level[nxt] = level[cur] + 1; // level 기록 (그냥 깊이 기록임)
-			qu.push(nxt);
-		}
-	}
-	return level[T] != -1; // -1 이면 false 반환(종료 의미)
+public static long ccw(Point a, Point b, Point c) {
+    // 깊은 복제
+    Point a1 = new Point(a.x, a.y);
+    Point b1 = new Point(b.x, b.y);
+    Point c1 = new Point(c.x, c.y);
+    // 원점 이동
+    a1.x -= c1.x;
+    a1.y -= c1.y;
+    b1.x -= c1.x;
+    b1.y -= c1.y;
+    // det(행렬식) 계산
+    return a1.x*b1.y-a1.y*b1.x;
 }
 
-int dfs(int cur, int flow) {
-	// base condition
-	if (cur == T) return flow; // cur -> depth로 이해
-
-	for (int i = work[cur]; i < vc[cur].size(); i++) {
-		int nxt = vc[cur][i];
-		if (level[nxt] - level[cur] != 1 || c[cur][nxt] <= f[cur][nxt]) continue;
-		// 레벨 차가 1이고, 잔여용량이 0이상은 계속 진행
-
-		// 최소 유량 탐색
-		int minF = dfs(nxt, min(c[cur][nxt] - f[cur][nxt], flow));
-
-		// 유량 update
-		if (minF > 0) {
-			f[cur][nxt] += minF;
-			f[nxt][cur] -= minF;
-			work[cur] = i; // index 기록해서 시간 단축
-			return minF;
-		}
-	}
-	work[cur] = vc[cur].size();
-	return 0;
+public static int direction(Point a, Point b, Point c) {
+    // 좌 : 1, 우 : -1, 일 : 0
+    if(ccw(a,b,c) > 0) return 1;
+    if(ccw(a,b,c) < 0) return -1;
+    return 0; // ccw(a,b,c)==0
 }
 
-int main() {
-	// speed up
-	ios::sync_with_stdio(0);
-	cin.tie(0);
+// intersect => 직선 2개 교차 판별 (끝점 포함 => 0 가능을 의미)
+public static boolean intersect(Point a, Point b, Point c, Point d) {
+    // (a,b,c)*(a,b,d) ==-1 && (c,d,a)*(c,d,b)==-1 성립하면 교차
+    return direction(a, b, c) * direction(a, b, d) <= 0 && direction(c, d, a) * direction(c, d, b) <= 0;
+}
 
-	// input
-	cin >> N >> M;
-	int n1, n2, w;
-	for (int i = 0; i < M; i++) {
-		cin >> n1 >> n2 >> w;
-		vc[n1].push_back(n2);
-		vc[n2].push_back(n1); // 양방향
-		c[n1][n2] += w; // 양방향 간선이므로, 양쪽으로 용량 할당
-		c[n2][n1] += w;
-	}
-	cin >> S >> T;
+public static boolean bfs() {
+    Arrays.fill(level, -1);
+    Queue<Integer> qu = new LinkedList<>(); // bfs
 
-	// run
-	int maximumFlow = 0; // 제거된 최소 간선 가중치 합
-	while (true) {
-		if (!bfs()) break; // 종료
+    level[S] = 0; // start
+    qu.add(S);
+    while(!qu.isEmpty()) {
+        int curIdx = qu.peek(); qu.remove();
+        for(Node cur : inArr[curIdx]) {
+            // 잔여용량 부족이나 레벨이미 채워진 경우엔 continue
+            if(cur.c<=cur.f || level[cur.nxtIdx] != -1) continue;
+            level[cur.nxtIdx] = level[curIdx] + 1; // => 깊이 기록을 의미
+            qu.add(cur.nxtIdx);
+        }
+    }
+    if(level[T] != -1) return true;
+    return false; // 이 경우는 BFS 순회 실패의 경우. 즉, Dinic's 의 종료시점
+}
 
-		fill(work, work + 505, 0);
-		int flow = dfs(S, INF);
+// "residual capacity : 잔여용량" 의 개념이 중요
+public static int dfs(int curIdx, int curRsdCap) {
+    // base condition
+    if (curIdx == T) return curRsdCap; // 끝 도달시 return
 
-		// 최대 유량 update
-		maximumFlow += flow;
-	}
+    //        for (Node cur : inArr[curIdx]) {
+    for(int i = work[curIdx]; i<inArr[curIdx].size(); i++) {
+        Node cur = inArr[curIdx].get(i);
+        // 잔여용량 부족이나 레벨 차가 1이 아닌 경우엔 continue
+        if(cur.c<=cur.f || level[cur.nxtIdx] - level[curIdx] != 1) continue;
+        // 최소 유량 탐색
+        int nxtRsdCap = cur.c-cur.f; // 잔여용량 : 용량-유량
+        int minFlow = dfs(cur.nxtIdx, Math.min(nxtRsdCap, curRsdCap));
+        // update 잉여 그래프 = 유량 update 를 의미
+        if(minFlow > 0) {
+            cur.f += minFlow;
+            inArr[cur.nxtIdx].get(cur.reverseIdx).f -= minFlow;
+            work[curIdx] = i;
+            return minFlow;
+        }
+    }
+    work[curIdx] = inArr[curIdx].size();
+    return 0;
+}
 
-	// output
-	cout << maximumFlow;
-	return 0;
+public static void main(String[] args) throws IOException {
+    // init
+    for(int i = 0; i<505; i++)
+        inArr[i] = new ArrayList<>();
+    // input
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    N = Integer.parseInt(stk.nextToken());
+    K = Integer.parseInt(stk.nextToken());
+    H = Integer.parseInt(stk.nextToken());
+    M = Integer.parseInt(stk.nextToken());
+    int a, b;
+    for(int i = 0 ;i <N;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        a = Integer.parseInt(stk.nextToken());
+        b = Integer.parseInt(stk.nextToken());
+        house[i] = new Point(a, b);
+    }
+    for(int i = 0 ;i <H;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        a = Integer.parseInt(stk.nextToken());
+        b = Integer.parseInt(stk.nextToken());
+        hole[i] = new Point(a,b);
+    }
+    for(int i = 0 ;i <M;i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        a = Integer.parseInt(stk.nextToken());
+        b = Integer.parseInt(stk.nextToken());
+        mouse[i] = new Point(a,b);
+    }
+
+    // run
+    // 0. 시작(S), 끝(T)를 임의로 지정해서 일반적인 S->T maxflow로 바꾼다.
+    S=0; T=H+M+1; // 시작S: 0, 끝T: H+M+1
+
+    // 1. 쥐와 간선에 대한 정보는 "선분 교차 판정"을 이용 => 간선
+    // Edge 구하기 1
+    // (초기세팅) 모든 쥐(M)들은 1만큼의 용량 존재, 모든 쥐구멍(H)은 K만큼의 용량 존재
+    for (int i = 1; i <= M; i++) { // S=0이므로 i=1부터
+        inArr[0].add(new Node(i, inArr[i].size(), 1, 0));
+        inArr[i].add(new Node(0, inArr[0].size()-1, 0, 0)); // 양방향
+    } // 1~M 사용
+    for (int i = M + 1; i <= M + H; i++) { // T=H+M+1이므로 i<=M+H까지
+        inArr[i].add(new Node(M+H+1, inArr[M+H+1].size(), K, 0));
+        inArr[M+H+1].add(new Node(i, inArr[i].size()-1, 0, 0)); // 양방향
+    } // M+1~M+H 사용
+
+    // Edge 구하기 2
+    // 쥐와 쥐구멍 에지 생성(교차 확인을 통해)
+    for (int i = 0; i < M; i++) {
+        for (int j = 0; j < H; j++) {
+            boolean flag = true;
+            for (int k = 0; k < N; k++) {
+                int idx = (k + 1) % N;
+                if (direction(hole[j], house[k], house[idx]) == 0) continue; // 쥐구멍이 벽에 있다는건 교차로 판별하면 안됌
+                if (intersect(mouse[i], hole[j], house[k], house[idx])) { // 쥐, 쥐구멍 교차 확인
+                    flag = false; // 중간에 모서리가 존재한다는 의미
+                    break;
+                }
+
+            }
+            if (flag) {
+                // 용량 1 존재. 만약 교차 안했으면 에지자체가 없는거. 그래프 연결 안되어있는것.
+                inArr[i+1].add(new Node(M + j + 1, inArr[M+j+1].size(), 1, 0));
+                inArr[M+j+1].add(new Node(i + 1, inArr[i+1].size()-1, 0, 0)); // 양방향
+            }
+        }
+    }
+
+    // 2. 최대 유량으로 해결 => Dinic's 사용하겠음
+    // run
+    int totalFlow = 0; // 제거된 최소 간선 가중치 합
+    while(true) {
+        // 1. 레벨그래프를 구함 - BFS를 사용
+        if(!bfs()) break;
+        // 2. flow를 찾음 - DFS와 레벨그래프 사용(차단유량 찾기)
+        Arrays.fill(work, 0); // 속도 개선용으로 사용(안써도 됨)
+        int flow = dfs(S, 10000000); // 10000000 : 임의로 설정한 잔여용량
+        // 3. TotalFlow 에 구한 flow들을 더함
+        totalFlow += flow;
+    }
+
+    // output
+    if (totalFlow == M) System.out.println("Possible");
+    else System.out.println("Impossible");
+}
+
+static class Node {
+    int nxtIdx; // 연결 노드인겸 index
+    int reverseIdx; // 역방향 노드의 배열 index
+    int c; // capacity(용량)
+    int f; // flow(유량)
+    public Node (int nxtIdx, int reveresIdx, int c, int f) {
+        this.nxtIdx = nxtIdx; this.reverseIdx=reveresIdx; this.c = c; this.f = f;
+    }
+}
+
+static class Point {
+    long x; long y;
+    public Point(long x, long y) {
+        this.x = x; this.y = y;
+    }
 }
 ```
 
 <br><br>
 
+
+
+
+
+여긴 정수론 추가 및 md도 따로 ㄱㄱ (물론 maxflow도 md따로)
+
+
+
 # 참고
 
 **`set, unordered_set, priority_queue` 의 경우에 무슨 자료구조를 언제 사용할까를 정해두려고 한다.**
 
-* 우선 `set` 을 우선으로 사용하되 `prev, next, lower_bound` 같은 동작들이 필요없고 `priority_queue` 가 사용하는 동작만 필요하다면 `priority_queue` 를 사용하자.
+* 우선 `set` 을(RBT구조) 우선으로 사용하되 `prev, next, lower_bound` 같은 동작들이 필요없고 `priority_queue` 가 사용하는 동작만 필요하다면 `priority_queue` 를 사용하자.
