--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -2933,13 +2933,189 @@ static class Point {
 
 <br><br>
 
+## 정수론
 
+**`피타고라스` 관련 구하는 방법은 아래를 참고**
 
+```java
 
+/**
+ * BOJ16123 메모리 초과 문제로 해결 불가
+ * 따라서 원시 피타고라스 쌍 구하는 과정만 익혀보겠음.
+ *
+ * 그냥 피타고라스는 a^2+b^2=c^2 을 만족하기만 하면 되고
+ * 원시 피타고라스는 gcd(a,b,c)=1 즉, 최대공약수=1 까지 만족
+ * 아래 알고리즘은 원시 피타고라스를 구하는 것이고, 피타고라스 전부를 구하고 싶다면
+ * 구한 a,b,c에 스칼라배를 통해서 나머지 피타고라스 수까지 구하면 된다.
+ */
+static List<Point> outArr = new ArrayList<>();
 
-여긴 정수론 추가 및 md도 따로 ㄱㄱ (물론 maxflow도 md따로)
+public static void main(String[] args) throws IOException {
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    long L = Long.parseLong(br.readLine()); // n < m <= L
+    long a, b, c;
+    for(int m = 2; m<=L; m++) {
+        if(m%2==0) { // 짝수
+            for(int n=1; n<m; n+=2) { // 홀수
+                a = (long) (Math.pow(m,2)-Math.pow(n,2));
+                b = 2*m*n;
+                c = (long) (Math.pow(m,2)+Math.pow(n,2));
+                outArr.add(new Point(m,n,a,b,c));
+            }
+        }
+        else { // 홀수
+            for(int n=2; n<m; n+=2) {
+                a = (long) (Math.pow(m,2)-Math.pow(n,2));
+                b = 2*m*n;
+                c = (long) (Math.pow(m,2)+Math.pow(n,2));
+                outArr.add(new Point(m,n,a,b,c));
+            }
+        }
+    }
+    System.out.println(outArr.size()); // 원시 피타고라스 쌍 개수
+    // outArr 에 구한 원시 피타고라스 존재
+}
+static class Point {
+    long m; long n; long a; long b; long c;
+    public Point(long m, long n, long a, long b, long c){
+        this.m=m; this.n=n; this.a=a; this.b=b; this.c=c;
+    }
+}
+```
 
+<br>
 
+**`일차 디오판토스 방정식` 의 개념을 사용한 문제 풀이이며, 문제는 아래 코드 주석에 적혀있다.**
+
+**중요한점은 `확장된 유클리드` 개념도 사용했다는 점이며, 나머지는 아래 사진을 보고 이해할 것.**
+
+<br>
+
+**ax+by=c의 해 존재를 판별하는 방법 => gcd(a,b)|c 성립 유무로 판단**
+
+![image-20230608005314126](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230608005314126.png)
+
+<br>
+
+**확장 유클리드 알고리즘을 통해서 `gcd(a,b) = a*s+b*t`  의 `s,t,g` 를 구해내고  
+아래 그림처럼 k를 구한 후 x, y 정수 해를 구할 수 있다.**
+
+![image-20230608005409155](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230608005409155.png) 
+
+<br>
+
+**아래는 아래 코드의 문제를 해결하기 위한 아이디어를 나타낸 그림이다.**
+
+![image-20230608005714788](/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230608005714788.png)
+
+<br>
+
+```java
+/*
+입력
+5
+2 4 18
+1 9 12
+4 9 100
+4 8 19
+3 12 100
+출력
+5
+4
+14
+-1
+-1
+ */
+
+/**
+ * 세 양의 정수 a, b,c 를 읽은 후, ax+by=c을 만족하는 정수 x, y를 찾되
+ * |x|+|y|이 최소가 되도록 하는 값을 구하면 되며, 해를 구할수 없는 경우 -1을 출력한다.
+ */
+public class 디오판토스_과제물 {
+
+    public static void main(String[] args) throws IOException {
+        String file = "./eq.inp";
+        FileInputStream fileStream = new FileInputStream(file);
+        BufferedReader br = new BufferedReader(new InputStreamReader(fileStream));
+        StringTokenizer stk;
+        StringBuilder sb = new StringBuilder();
+        int T = 0;
+        int a, b, c;
+        int r, r1, r2, s, s1, s2, t, t1, t2, q, g;
+        T = Integer.parseInt(br.readLine());
+        for (int i = 0; i<T; i++) {
+            //cin >> a >> b >> c;
+            stk = new StringTokenizer(br.readLine(), " ");
+            a = Integer.parseInt(stk.nextToken());
+            b = Integer.parseInt(stk.nextToken());
+            c = Integer.parseInt(stk.nextToken());
+            r1 = a; r2 = b;
+            s1 = 1; s2 = 0;
+            t1 = 0; t2 = 1;
+            while (r2 > 0) {
+                q = r1 / r2;
+                r = r1 - q * r2;
+                r1 = r2; r2 = r;
+                s = s1 - q * s2;
+                s1 = s2; s2 = s;
+                t = t1 - q * t2;
+                t1 = t2; t2 = t;
+            }
+            g = r1; s = s1; t = t1; // 확장 유클리드 완료
+
+            // 해존재 유무 판별. g|c 가능 여부로 판단.
+            if (c % g != 0) {
+                sb.append(-1).append('\n');
+                continue;
+            }
+            q = c / g; // c/g 몫 기록
+            
+            // 초기해 x0, y0 구함
+            int x0 = s * q; int y0 = t * q;
+
+            // 증가 방향인지 감소 방향인지 확인
+            int x1 = x0 + (b / g) * 0;
+            int y1 = y0 - (a / g) * 0;
+            int x2 = x0 + (b / g) * 1;
+            int y2 = y0 - (a / g) * 1;
+            int cur1 = Math.abs(x1) + Math.abs(y1);
+            int cur2 = Math.abs(x2) + Math.abs(y2);
+            boolean check = false; // false : 증가, true : 감소방향
+            if (cur1 < cur2) check = true;
+            else check = false;
+
+            int k = 0;
+            int x = x0 + (b / g) * k;
+            int y = y0 - (a / g) * k;
+            int cur = Math.abs(x) + Math.abs(y);
+            int prev = cur;
+            while (true) { // 2차 방정식
+                // update k
+                if (check) k--;
+                else k++;
+
+                // run
+                x = x0 + (b / g) * k;
+                y = y0 - (a / g) * k;
+                cur = Math.abs(x) + Math.abs(y);
+
+                // break
+                if (cur > prev) {
+                    break;
+                }
+                prev = cur;
+            }
+
+            sb.append(prev).append('\n');
+        }
+
+        FileOutputStream fs = new FileOutputStream("./eq.txt");
+        fs.write(sb.toString().getBytes());
+//        System.out.println(sb);
+    }
+```
+
+<br><br>
 
 # 참고
 
